argocd/infrastructure/cilium-lb/default-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-default
  namespace: default
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: 192.168.88.151
  listeners:
  - name: https
    protocol: HTTPS
    port: 443
    hostname: "*.lazydogs.work"
    tls:
      mode: Terminate
      certificateRefs:
      - group: ''
        name: lazydogs-work-key-pair
        kind: Secret
    allowedRoutes:
      namespaces:
        from: All
  - name: http
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: default-https-redirect
  namespace: default
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-default
      sectionName: http 
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            port: 443
            statusCode: 301
      matches:
        - path:
            type: PathPrefix
            value: /
