argocd/infrastructure/cilium-lb/hubble-ui-ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-internal-route
  namespace: kube-system
spec:
  parentRefs:
  - group: gateway.networking.k8s.io	
    kind: Gateway	
    name: gateway-internal
    namespace: default
    weight: 1	
  hostnames: ["hubble.internal.lazydogs.work"]
  rules:
  - backendRefs:
    - group: ''	
      kind: Service	
      name: hubble-ui
      port: 80
      weight: 1	
    matches:	
      - path:	
          type: PathPrefix	
          value: /
