argocd/infrastructure/cilium-lb/internal-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-internal
  namespace: default
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: 192.168.88.150
  listeners:
  - name: https
    protocol: HTTPS
    port: 443
    hostname: "*.internal.lazydogs.work"
    tls:
      mode: Terminate
      certificateRefs:
      - group: ''
        name: lazydogs-work-key-pair
        kind: Secret
    allowedRoutes:
      namespaces:
          from: All
  - name: http
    protocol: HTTP
    port: 80
    hostname: "*.internal.lazydogs.work"
    allowedRoutes:
      namespaces:
        from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: internal-https-redirect
  namespace: default
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-internal
      sectionName: http
  rules:
    - filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            set: 
              - name: "X-Forwarded-Proto"
                value: "https"
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
      matches:
        - path:
            type: PathPrefix
            value: /
